--- a/ExcelConsumerApp.csproj
+++ b/ExcelConsumerApp.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
   </ItemGroup>
 
 </Project>
